<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20sp"
    android:paddingTop="20sp"
    android:paddingRight="20sp"
    android:paddingBottom="20sp"
    tools:context=".activities.Register">

    <EditText
        android:id="@+id/usernameBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/naz"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|text"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="24dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passwordBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/has"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/usernameBox1"
        tools:layout_editor_absoluteX="20dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/password2Box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/has2"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox1"
        tools:layout_editor_absoluteX="20dp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/reg2"
        app:layout_constraintTop_toBottomOf="@+id/password2Box"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/log2"
        android:textColor="#0D47A1"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/zarej"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="24dp" />

</android.support.constraint.ConstraintLayout>