<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20sp"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:paddingTop="20sp"
    tools:context=".activities.Login"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/usernameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:hint="@string/naz"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textPassword"
        app:layout_constraintBottom_toTopOf="@+id/passwordBox"
        tools:layout_editor_absoluteX="24dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:hint="@string/has"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        tools:layout_editor_absoluteX="20dp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="246dp"
        android:layout_marginBottom="16dp"
        android:text="@string/zalog"
        app:layout_constraintBottom_toTopOf="@+id/registerLink"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:gravity="center"
        android:text="@string/reg"
        android:textColor="#0D47A1"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="65dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/log"
        android:textColor="#0D47A1"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="36dp" />

</android.support.constraint.ConstraintLayout>